- update, a little bit more polishing needed, but already close

--- a/calibration_time.tex
+++ b/calibration_time.tex
@@ -1,6 +1,6 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Estimate of the time needed for momentum calibration}
+\section{Estimate of the calibration time}
 Calibration with RPC on hydrogen allows to determine the momentum scale of the experiment.
 
 In this section we assume that the experimental background doesn't affect
