--- a/rpc_on_hydrogen.tex
+++ b/rpc_on_hydrogen.tex
@@ -4,18 +4,33 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{RPC on hydrogen}
 
-Has been measured in \cite{RPC_1972_Bistirlich_PhysRevC.5.1867}.
+The energy spectrum of photons produced in the process of RPC on hydrogen \cite{RPC_1972_Bistirlich_PhysRevC.5.1867} is shown if Figure~\ref{figure:1971_bistirlich_fig_02_h2}.
+\add{The peak at 129.4 MeV corresponds to photons produced in the $\pi^- p \to n \gamma$ reaction,
+  The low energy part of the spectrum is populated by the photons from decays of $\pi^0$ produced
+  in the $\pi^- p \to n \pi^0$ reaction. The photons have been reconstructed in a $\gamma \to e^+e^-$
+  mode with the electron and positron momenta reconstructed in the magnetic spectrometer.
+}
+\del{
+  Events of interest for calibration are the monochomatic RPC photons at 129.4 MeV
+  from $\pi^{-} p \to n \gamma$ on hydrogen. Measurement of this process is shown in 
+  Figure~\ref{figure:1971_bistirlich_fig_02_h2}
+  , the photon energy spectrum from pion capture on hydrogen, which also includes lower energy photons from the charge exchange reaction.
+}
 
-Events of interest for calibration are the monochomatic RPC photons at 129.4 MeV from $\pi^{-} p \to n \gamma$ on
-hydrogen. Measurement of this process is shown in 
-Figure~\ref{figure:1971_bistirlich_fig_02_h2}
-, the photon energy spectrum from pion capture on hydrogen, which also includes lower energy photons from the charge exchange reaction. 
-For the $\rm{CH_2}$ spectrum in 
+\add{The 129.4 MeV $\pi^{-} p \to n \gamma$ peak is also clearly seen on hydrogen-containing compounds.
+  Figure~\ref{figure:1971_bistirlich_fig_09_ch2}, also taken from \cite{RPC_1972_Bistirlich_PhysRevC.5.1867},
+  shows the photon energy spectrum from RPC on a $CH_2$ target.
+  There is a clear separation between the contributions of $H$ and $C_{12}$,
+  and the part of the spectrum in between 90 and 120 MeV is dominated by the photons from RPC on $C_{12}$
+}
+\del{For the $\rm{CH_2}$ spectrum in 
 Figure~\ref{figure:1971_bistirlich_fig_09_ch2}
 , photons from RPC on carbon occupy the region between the two hydrogen peaks.
-To produce a photon in the 129.4 MeV peak, a negative pion stopped on
-a $\rm{CH_2}$  degrader must both (i) capture on a hydrogen rather than carbon nucleus, and (ii) interact
-radiatively with the proton via $\pi^{-} p \to n \gamma$ rather than producing an intermediate $\pi^0$.
+}
+To produce a \del{photon in the 129.4 MeV peak}\add{129.4 MeV photon},
+\add{(i)} a negative pion stopped on a $\rm{CH_2}$  degrader must
+\del{both (i)} \add{be captured}\del{capture} on a hydrogen rather
+than carbon nucleus, and (ii) \add{the capture must be followed by a $\pi^{-} p \to n \gamma$ reaction}\del{interact radiatively with the proton via $\pi^{-} p \to n \gamma$ rather than producing an intermediate $\pi^0$}.
 
 
 \begin{figure}[H]
