--- a/geometry_v4.tex
+++ b/geometry_v4.tex
@@ -1,14 +1,14 @@
 %
 \section{Option 2: converter inside the OPA}
-
-If a converter radius is large enough, a converter ring surrounding the pion degrader
+\label{section:geometry_v4}
+If the converter radius is large enough, the converter ring surrounding the pion degrader
 could be limiting the degrader arm movement. 
 An attractive option of positioning the converter is to have the converter placed 
 at the upstream end of the OPA. In this case, a gold converter foil could be put
 on a thin ring made of fiber foam and supported by the OPA, similar to the stopping target.
 That would allow to make a converter ring wider and increase the yield of $\gamma \to e^+e^-$
-events and simplify geometry of the moving part positioned inside a narrow gap in between
-the TS and OPA.
+events and simplify geometry of the moving part of the degrader positioned inside
+a narrow gap in between the TS and OPA.
 
 \begin{figure}[H]
   \begin{tikzpicture}
@@ -68,7 +68,7 @@ the TS and OPA.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-\subsection{Impact on the CE acceptance}
+\subsection{Converter impact on the CE acceptance}
 
 Figure~\ref{figure:ce_momentum_tsda} compares acceptances for the reconstructed CE tracks
 got default geometry and geometry w/o the converter.
